Filled out the education section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,22 @@
     <section class="education" id="education">
         <h2 class="education__title">Education</h2>
         <div class="education__timeline-items">
-            
+            <div class="education__timeline-item">
+                <div class="education__timeline-dot"></div>
+                <div class="education__timeline-date">2021</div>
+                <div class="education__timeline-content">
+                    <h3>Вятский государственный университет</h3>
+                    <p>Экономическая безопасность</p>
+                </div>
+            </div>
+            <div class="education__timeline-item">
+                <div class="education__timeline-dot"></div>
+                <div class="education__timeline-date">2024</div>
+                <div class="education__timeline-content">
+                    <h3>Компьютерная Академия TOP</h3>
+                    <p>Разработка программного обеспечения</p>
+                </div>
+            </div>
         </div>
     </section>
 
