Extra code and images have been removed

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <div class="project__description">
                     <p class="project__name">Верстка макета Vesta</p>
                     <div class="project__info">
-                        <a href="" class="project__info-btn"><i class="modal__icon bx bxl-internet-explorer"></i></a>
+                        <a href="https://vesta-ruby.vercel.app/" class="project__info-btn"><i class="modal__icon bx bxl-internet-explorer"></i></a>
                         <a href="https://github.com/Ekaterina-timans/vesta" class="project__info-btn"><i class="modal__icon bx bxl-github"></i></a>
                         <a href="https://www.figma.com/design/w6Peh4FeKb0GKPO3bsuvME/Untitled-(Copy)-(Copy)-(Copy)-(Community)?node-id=5-70&t=TqRfVf4fY9fJHAdF-1" class="project__info-btn"><i class="modal__icon bx bxl-figma"></i></a>
                     </div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
             <div class="project__block">
-                <img src="images/Recipes-home.png" alt="">
+                <img src="images/Statistics-dark.jpg" alt="Изображение страницы Statistics">
                 <div class="project__description">
                     <p class="project__name">Веб-приложение планировщик задач</p>
                     <div class="project__info">
@@ -316,7 +316,7 @@
             <div class="project__modal-content vesta">
                 <div class="modal__links">
                     <div class="modal__link">
-                        <i class="modal__icon bx bxl-internet-explorer"></i><p>Веб-сайт:</p><a href="" target=»_blank»>Ссылка на сайт</a>
+                        <i class="modal__icon bx bxl-internet-explorer"></i><p>Веб-сайт:</p><a href="https://vesta-ruby.vercel.app/" target=»_blank»>Ссылка на сайт</a>
                     </div>
                     <div class="modal__link">
                         <i class="modal__icon bx bxl-github"></i><p>GitHub:</p><a href="https://github.com/Ekaterina-timans/vesta" target=»_blank»>Ссылка на проект в GitHub</a>
@@ -406,6 +406,7 @@
                     <img class="swiper-slide" src="images/Settings.png" alt="Изображение страницы Settings" width="900" height="450">
                     <img class="swiper-slide" src="images/Users.png" alt="Изображение страницы Users" width="900" height="450">
                     <img class="swiper-slide" src="images/Banned.png" alt="Изображение страницы Banned users" width="900" height="450">
+                    <img class="swiper-slide" src="images/Authorization.jpg" alt="Изображение страницы Banned users" width="900" height="450">
                 </div>
                 <div class="slider-control">
                     <div class="swiper-button-prev arrow-left"></div>
