Added changes to header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <nav class="header__nav">
               <ul>
-                <li><a href="#about" class="active">Обо мне</a></li>
+                <li><a href="#about">Обо мне</a></li>
                 <li><a href="#education">Образование</a></li>
                 <li><a href="#skills">Навыки</a></li>
                 <li><a href="#projects">Проекты</a></li>
@@ -29,7 +29,7 @@
         </div>
         <div class="header__menu-bg"></div>
         <nav class="header__navbar">
-            <a href="#about" class="active">Обо мне</a>
+            <a href="#about">Обо мне</a>
             <a href="#education">Образование</a>
             <a href="#skills">Навыки</a>
             <a href="#projects">Проекты</a>
